--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
+    --background-muted: 0 0% 96%;
     --foreground: 20 14.3% 4.1%;
     --card: 0 0% 100%;
     --card-foreground: 20 14.3% 4.1%;
@@ -27,7 +28,7 @@
   }
 
   .dark {
-    --background: 20 14.3% 4.1%;
+    --background: 225 9% 9%;
     --foreground: 60 9.1% 97.8%;
     --card: 20 14.3% 4.1%;
     --card-foreground: 60 9.1% 97.8%;
